--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,7 @@ header a {
 
 #menu {
     font-size: 110%;
+    font-weight: 500;
     letter-spacing: 4px;
     list-style-type: none;
 }
@@ -120,12 +121,12 @@ main {
 
 /* Reasons section */
 #reasons {
-    width: 90%;
-    margin: 20px auto;
+    width: 95%;
+    margin: 30px auto;
 }
 
 #reasons h2 {
-    padding: 40px;
+    padding: 20px 20px 40px 20px;
     margin-bottom: 30px;
     text-align: center;
     font-size: 280%;
@@ -134,8 +135,8 @@ main {
 
 #benefits-physical > div,
 #benefits-mental > div {
-    line-height: 20px;
-    margin-bottom: 20px;
+    line-height: 25px;
+    margin-bottom: 25px;
 }
 
 #benefits p {
@@ -150,7 +151,7 @@ main {
 #circle-cover-bg {
     background: url('../images/reasons-image.webp') no-repeat top center / cover;
     height: 90vw;
-    width: 90vw;
+    width: 85vw;
     margin-bottom: 20px;
     /* Makes the square image into a circle */
     border-radius: 50%;
