--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,13 +47,13 @@ header a {
 
 #menu {
     font-size: 110%;
-    font-weight: 500;
     letter-spacing: 4px;
     list-style-type: none;
 }
 
 #menu > li {
     margin-bottom: 1em;
+    font-weight: bold;
 }
 
 /*.active {
